fix: spinner view on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -104,6 +104,14 @@ li {
 .spinner {
   animation: spin 2s linear infinite;
   display: inline-block;
+
+  @media (max-width: 820px) {
+    position: fixed;
+    top: calc(50vh - 30px);
+    left: calc(50vw - 30px);
+    width: 30px;
+    height: 30px;
+  }
 }
 
 @keyframes spin {
